FastUPR Sequentialize fixes. Replaced inOutVars. Cleanup FastUPR Main functionality finished - testing needed. FastUPR bugfixes, Examples, Rewritten OctagonTerm/OctagonConjunction